2008-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2008-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR testsuite/35621
	* gcc.target/i386/ssse3-pabsb.c: Add -fno-strict-aliasing.
	* gcc.target/i386/ssse3-pabsd.c: Likewise.
	* gcc.target/i386/ssse3-pabsw.c: Likewise.
	* gcc.target/i386/ssse3-palignr.c: Likewise.
	* gcc.target/i386/ssse3-phaddd.c: Likewise.
	* gcc.target/i386/ssse3-phaddsw.c: Likewise.
	* gcc.target/i386/ssse3-phaddw.c: Likewise.
	* gcc.target/i386/ssse3-phsubd.c: Likewise.
	* gcc.target/i386/ssse3-phsubsw.c: Likewise.
	* gcc.target/i386/ssse3-phsubw.c: Likewise.
	* gcc.target/i386/ssse3-pmaddubsw.c: Likewise.
	* gcc.target/i386/ssse3-pmulhrsw.c: Likewise.
	* gcc.target/i386/ssse3-pshufb.c: Likewise.
	* gcc.target/i386/ssse3-psignb.c: Likewise.
	* gcc.target/i386/ssse3-psignd.c: Likewise.
	* gcc.target/i386/ssse3-psignw.c: Likewise.

2008-03-19  Michael Matz  <matz@suse.de>

	Backport from mainline:
	2008-03-19  Michael Matz  <matz@suse.de>

	PR middle-end/35616
	* gcc.dg/pr35616.c: New test.

2008-03-19  Andreas Krebbel  <krebbel1@de.ibm.com>

	* gcc.dg/pr35258.c: New testcase.

2008-03-18  Mikulas Patocka  <mikulas@artax.karlin.mff.cuni.cz>

	PR target/35504
	* g++.dg/other/pr35504.C: New test.

2008-03-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-03-15  Richard Guenther  <rguenther@suse.de>

	PR middle-end/35593
	* g++.dg/warn/Warray-bounds-3.C: New testcase.

2008-03-17  Jason Merrill  <jason@redhat.com>

	PR c++/35548
	* g++.dg/init/ref16.C: New testcase.

2008-03-14  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-02-19  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/34989
	* gcc.dg/pr34989-1.c: New testcase.
	* gcc.dg/pr34989-2.c: Likewise.

2008-03-14  Uros Bizjak  <ubizjak@gmail.com>

	PR target/34000
	PR target/35553
	* g++.dg/other/i386-3.C: New test.
	* gcc.target/i386/sse-13.c: Redefine extern instead of static.
	* gcc.target/i386/sse-14.c: Ditto.